2009-03-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt
        
        https://bugs.webkit.org/show_bug.cgi?id=24366
        
        Make this test more reliable by only calling runAnimationTest() once
        the animation starts, not before some setTimeout().

        * animations/change-keyframes-name-expected.txt:
        * animations/change-keyframes-name.html:

2009-03-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt
        
        https://bugs.webkit.org/show_bug.cgi?id=24266
        
        Land new expected results for transform-absolute-in-positioned-container.html,
        and new pixel results for reflection-masks.html. Both are progressions.

        * platform/mac/fast/reflections/reflection-masks-expected.checksum:
        * platform/mac/fast/reflections/reflection-masks-expected.png:
        * platform/mac/fast/repaint/transform-absolute-in-positioned-container-expected.checksum:
        * platform/mac/fast/repaint/transform-absolute-in-positioned-container-expected.png:
        * platform/mac/fast/repaint/transform-absolute-in-positioned-container-expected.txt:

2009-03-11  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein
       
        https://bugs.webkit.org/show_bug.cgi?id=23093
        
        Test for repainting of the search field cancel button.

        * fast/repaint/search-field-cancel.html: Added.
        * platform/mac/fast/repaint/search-field-cancel-expected.checksum: Added.
        * platform/mac/fast/repaint/search-field-cancel-expected.png: Added.
        * platform/mac/fast/repaint/search-field-cancel-expected.txt: Added.

2009-03-11  Marc-André Decoste  <mad@chromium.org>

        Reviewed by Eric Seidel.

        Fixed the positions of the list boxes so that the size of their
        rendering doesn't affect the test coordinates.
        https://bugs.webkit.org/show_bug.cgi?id=24006

        * fast/forms/option-mouseevents-expected.txt: